groww_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groww-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: groww-service
            port:
              number: 5020
