http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shaan-http-route
  namespace: shaan-ns

spec:
  parentRefs:
    - name: shaan-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/fitness

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /

      backendRefs:
        - name: shaan-service
          port: 5010
